--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	</nav>
 				<div class="container2">
 				 <!-- <header><h2 id="ritik">Hi ! Thanks for the visit...</h2></header> -->
-				 	<img src="passportsize22.jpg" style=" width: 17%; margin-left: 42%; margin-top: 4%;margin-right: 35%;border-radius: 45%;">
+				 	<img src=rrs.jpg" style=" width: 17%; margin-left: 42%; margin-top: 4%;margin-right: 35%;border-radius: 45%;">
 				 	<p id="name">Hi ! I'm Ritik Raj<br>_______________</p>
 				 	<p id="tag"> Undergraduate Computer Science Student <br>Jaypee University of Engineering & Technology <br>Guna</p>
 				</div> 
