--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				 <!-- <header><h2 id="ritik">Hi ! Thanks for the visit...</h2></header> -->
 				 	<img src="rrs.jpg" style=" width: 17%; margin-left: 42%; margin-top: 4%;margin-right: 35%;border-radius: 45%;">
 				 	<p id="name">Hi ! I'm Ritik Raj<br>_______________</p>
-				 	<p id="tag"> Undergraduate Computer Science Student <br>Jaypee University of Engineering & Technology <br>Guna</p>
+				 	<p id="tag"> BackEnd Dev Intern DailyObjects.com <br>Undergrad Computer Science Student <br>Jaypee University of Engineering & Technology <br>Guna</p>
 				</div> 
 			 
 
@@ -61,26 +61,26 @@
 
 				<div class="containercontact1" id="ad">
 					<h2>CONTACT</h2>
-						<form>
-							<label>First Name    :
-								<input type="text" type="text" placeholder="your firstname" id="rowinput">
+					<div class="form">
+						<form action="https://formspree.io/ritikrajsrivastava90@gmail.com" method="post">
+							<label> Name    :
+								<input type="text" type="text" placeholder="Full Name" id="rowinput">
 							</label>
-							<br><br>
-							<label>Last Name     :
-								<input type="text" type="text" placeholder="your lastname" id="rowinput">
-							</label>
-							<br><br>
+							<br><br>  
 							<label>Your Email    :
-								<input type="text" type="text" placeholder="Email Address" id="rowinput">
+								<input type="text" type="text" placeholder="email@domain.com" id="rowinput">
 							</label>
 							<br><br>
 							<label>Your Message  :
-								<input type="text" type="text" placeholder="Message" id="rowmessage">
-								</input>
+								<textarea placeholder="Drop your message for Ritik" id='rowmessage'></textarea> 
 							</label>
 							<br><br>
-							<button class="btn-secondary">SUBMIT</button>
+							<button class="btn">Send </button>
 						</form>
+					</div>
+					<div class="info">
+						
+					</div>
 				</div>
 
 			  	<div class="footer">
