added method POST

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				<div class="containercontact1" id="ad">
 					<h2>CONTACT</h2>
 					<div class="form">
-						<form action="https://formspree.io/ritikrajsrivastava90@gmail.com" method="post">
+						<form action="https://formspree.io/ritikrajsrivastava90@gmail.com" method="POST">
 							<label> Name    :
 								<input type="text" type="text" placeholder="Full Name" id="rowinput" required="">
 							</label>
