--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
 					<div class="form">
 						<form action="https://formspree.io/ritikrajsrivastava90@gmail.com" method="POST">
 							<label> Name    :
-								<input type="text" type="text" placeholder="Full Name" id="rowinput" required="">
+								<input type="text" type="text" name="name" placeholder="Full Name" id="rowinput" required="">
 							</label>
 							<br><br>  
 							<label>Your Email    :
-								<input type="text" type="text" placeholder="email@domain.com" id="rowinput" required=""> 
+								<input type="text" type="text" name="_replyto" placeholder="email@domain.com" id="rowinput" required=""> 
 							</label>
 							<br><br>
 							<label>Your Message  :
-								<textarea placeholder="Drop your message for Ritik" id='rowmessage' required=""></textarea> 
+								<textarea name="message" placeholder="Drop your message for Ritik" id='rowmessage' required=""></textarea> 
 							</label>
 							<br><br>
 							<button class="btn">Send </button>
