--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title></title>
 	
-	<link href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Thasadith" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Lato:400i" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
@@ -34,7 +34,7 @@
 	</nav>
 				<div class="container2">
 				 <!-- <header><h2 id="ritik">Hi ! Thanks for the visit...</h2></header> -->
-				 	<img src="rrs.jpg" style=" width: 17%; margin-left: 42%; margin-top: 4%;margin-right: 35%;border-radius: 45%;">
+				 	<img src="rrs.jpg" style=" width: 17%; margin-left: 42%; margin-top: 4%;margin-right: 35%;border-radius: 50%;">
 				 	<p id="name">Hi ! I'm Ritik Raj<br>_______________</p>
 				 	<p id="tag"> BackEnd Dev Intern DailyObjects.com <br>Undergrad Computer Science Student <br>Jaypee University of Engineering & Technology <br>Guna</p>
 				</div> 
@@ -59,8 +59,10 @@
 					</p>
 				</div>
 
-				<div class="containercontact1" id="ad">
-					<h2>CONTACT</h2>
+				<div class="containercontact" id="ad"> 
+					<p id="about"> Contact Me </p> 
+			</div>
+				<div class="containercontact1" >
 					<div class="form">
 						<form action="https://formspree.io/ritikrajsrivastava90@gmail.com" method="POST">
 							<label> Name    :
@@ -79,7 +81,14 @@
 						</form>
 					</div>
 					<div class="info">
-						
+						<label> Email : <br>	   	ritikrajsrivastava90@gmail.com
+						</label>
+						<br><br><br><br>
+						<label> Location : <br>  	Gorakhpur (U.P.) ,Guna(M.P.)
+						</label>
+						<br><br><br><br>
+						<label> Phone : <br>   		+91- 9140268352
+						</label>
 					</div>
 				</div>
 
