added skills & update footer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Lato:400i" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="trystyle.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	
 </head>
 <body>
 		
@@ -59,10 +61,33 @@
 					</p>
 				</div>
 
+				<div class="containerabout" id="ac">
+					<img src="wheel.gif" 
+					style="margin-top: 5%;margin-left: 32%;margin-right: 1px;margin-bottom: 1%; max-height: 100px;border-radius: 9%; ">
+					<p id="about"> Skills /\ </p>
+				</div>
+				<div class="containerskill">
+						<div class="row"> 
+								<div class="column">
+								  <img src="c.jpg" style=" max-width: 28%;">
+								  <img src="cpp.jpg" style=" max-width: 28%;">
+								  <img src="python.jpg" style=" max-width: 28%;"> 
+								</div>
+								<div class="column">
+								  <img src="js.jpg " style= "max-width: 14%;">
+								  <img src="nodejs.jpg " style=" max-width: 16%;">
+								  <img src="mongo.jpg " style=" max-width: 15%;"> 
+								  <img src="git.jpg" style=" max-width: 12%;">
+								  <img src="sql.jpg" style=" max-width: 28%; color: cornflowerblue">
+								</div>
+							  </div>
+				</div>
+
 				<div class="containercontact" id="ad"> 
 					<p id="about"> Contact Me </p> 
 			</div>
 				<div class="containercontact1" >
+ 
 					<div class="form">
 						<form action="https://formspree.io/ritikrajsrivastava90@gmail.com" method="POST">
 							<label> Name    :
@@ -79,7 +104,7 @@
 							<br><br>
 							<button class="btn">Send </button>
 						</form>
-					</div>
+					</div> 
 					<div class="info">
 						<label> Email : <br>	   	ritikrajsrivastava90@gmail.com
 						</label>
@@ -89,11 +114,19 @@
 						<br><br><br><br>
 						<label> Phone : <br>   		+91- 9140268352
 						</label>
+					</div> 
 					</div>
 				</div>
 
 			  	<div class="footer">
-			      <a id="foo">© 2018 Copyright: ritik raj</a>
+				<center>
+						<a href="https://github.com/chronos25" class="fa fa-github"	 title="Github"></a>
+						<a href="https://www.facebook.com/ritikraj.srivastava" class="fa fa-facebook"	 title="Facebook"></a>
+						<a href="#" class="fa fa-google" 	 title="Google"></a>
+						<a href="https://www.linkedin.com/in/ritikraj/" class="fa fa-linkedin" 	 title="LinkedIn"></a> 
+						<a href="https://www.instagram.com/be_with_rits/" class="fa fa-instagram"  title="Instagram"></a>
+				  <a id="foo"> <br> © 2018 Copyright: All right reserved.</a>
+				</center>
 			    </div>
 
 </body>
